--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -149,6 +149,9 @@
   // Files
   // ---------------------------------------------------------------------------
 
+  "files.exclude": {
+    "**/*.snap": true
+  },
   "files.associations": {
     "*.css": "postcss",
     ".*": "shellscript"
@@ -196,8 +199,8 @@
   // ---------------------------------------------------------------------------
 
   "python.pythonPath": "/usr/local/bin/python",
-  "python.formatting.provider": "black",
-  "python.formatting.blackPath": "/usr/local/bin/black",
+  // "python.formatting.provider": "black",
+  // "python.formatting.blackPath": "/usr/local/bin/black",
 
   // SCM
   // ---------------------------------------------------------------------------
@@ -309,5 +312,5 @@
   "zenMode.centerLayout": false,
   "zenMode.fullScreen": false,
   "zenMode.hideLineNumbers": false,
-  "zenMode.hideTabs": false
+  "zenMode.hideTabs": false,
 }
