--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -198,9 +198,10 @@
   // Python Extension
   // ---------------------------------------------------------------------------
 
-  "python.pythonPath": "/usr/local/bin/python",
-  // "python.formatting.provider": "black",
-  // "python.formatting.blackPath": "/usr/local/bin/black",
+  "python.pythonPath": "/usr/local/bin/python3",
+  "python.linting.pylintEnabled": true,
+  "python.linting.enabled": true,
+  "python.formatting.provider": "black",
 
   // SCM
   // ---------------------------------------------------------------------------
