Associate .css files with CSS

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -154,7 +154,7 @@
     "**/*.snap": true
   },
   "files.associations": {
-    "*.css": "postcss",
+    "*.css": "css",
     ".*": "shellscript"
   },
 
