Update gh alias

--- a/git/gh_config.yml
+++ b/git/gh_config.yml
@@ -4,4 +4,4 @@ git_protocol: https
 editor: vim
 # Aliases allow you to create nicknames for gh commands
 aliases:
-  co: pr checkout
+  prco: pr checkout
