--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -1596,6 +1596,8 @@
 			<string>Default</string>
 			<key>Disable Window Resizing</key>
 			<true/>
+			<key>Draw Powerline Glyphs</key>
+			<false/>
 			<key>Flashing Bell</key>
 			<false/>
 			<key>Foreground Color</key>
@@ -1929,13 +1931,13 @@
 			<key>Name</key>
 			<string>Operator Mono -&gt; Monokai Pro</string>
 			<key>Non Ascii Font</key>
-			<string>OperatorMono-Book 18</string>
+			<string>MesloLGS-NF-Regular 16</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Non-ASCII Ligatures</key>
 			<false/>
 			<key>Normal Font</key>
-			<string>OperatorMono-Book 16</string>
+			<string>OperatorMonoNerdFontComple-Book 16</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
