Some fixes and additions to .gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,9 +6,10 @@
   editor = nvim
 [push]
   default = current
+	autoSetupRemote = true
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [mergetool "sourcetree"]
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
@@ -36,7 +37,7 @@
   bd = branch -d                  # branch delete (local)
   bdf = branch -D                 # branch force delete (local)
   # Shortcut for git-extras delete-branch (https://github.com/tj/git-extras/blob/master/Commands.md#git-delete-branch)
-  db = rename-tag
+  db = delete-branch
   # Shortcut for git-extras delete-merged-branches (https://github.com/tj/git-extras/blob/master/Commands.md#git-delete-merged-branches)
   # and delete-squashed-branches (https://github.com/tj/git-extras/blob/master/Commands.md#git-delete-squashed-branches)
   dmb = "!f() { git delete-squashed-branches; git delete-merged-branches; }; f"
@@ -75,7 +76,6 @@
 
   # push
   p = push
-  ps = push
 
   # rebase
   rbc = rebase --continue          # continue rebase
