Latest vscode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,9 +1,4 @@
 {
-  // Atom Keymap Extension
-  // ---------------------------------------------------------------------------
-
-  "atomKeymap.promptV3Features": true,
-
   // Breadcrumbs
   // ---------------------------------------------------------------------------
 
@@ -151,22 +146,11 @@
     "postcss": "css"
   },
 
-  // ESLint
-  // ---------------------------------------------------------------------------
-
-  "eslint.packageManager": "yarn",
-
-  // Extensions
-  // ---------------------------------------------------------------------------
-
-  "extensions.experimental.affinity": {
-    "vscodevim.vim": 1
-  },
 
   // File Explorer
   // ---------------------------------------------------------------------------
 
-  "explorer.openEditors.visible": 0,
+  "explorer.openEditors.visible": 1,
 
   // Files
   // ---------------------------------------------------------------------------
@@ -287,7 +271,10 @@
   // Vim
   // ---------------------------------------------------------------------------
 
-  "vim.debug.silent": true,
+  // To improve performance
+  "extensions.experimental.affinity": {
+    "vscodevim.vim": 1
+  },
   "vim.leader": "<Space>",
   "vim.enableNeovim": true,
   "vim.neovimPath": "/usr/local/bin/nvim",
